fixed z-index issue and netlify react routing issue

--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -87,7 +87,7 @@ span.square{
     left:0;
     right:0;
     background-color:rgba(0, 0, 0, 0.8);
-    z-index:111111111;
+    z-index:5;
 }
 
 .loader{
