--- a/src/sass/_homepage.scss
+++ b/src/sass/_homepage.scss
@@ -103,7 +103,7 @@
         padding:1rem;
         border-radius: 6px;
         background-color: var(--background);
-        z-index: 1111111;
+        z-index: 1;
         .text-container{
             white-space: nowrap;
         }
