--- a/src/sass/_menu.scss
+++ b/src/sass/_menu.scss
@@ -1,6 +1,6 @@
 .menu-page{
     background-color:rgb(0, 0, 0);
-    z-index: 111111111111;
+    z-index: 9;
     padding-top:1rem;
 
     .cross-btn{
