--- a/src/sass/_popup.scss
+++ b/src/sass/_popup.scss
@@ -4,7 +4,7 @@
     top:50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    z-index: 111111111111111111;
+    z-index: 10;
     background-color: var(--background);
     min-height: 200px;
     width: 90%;
