--- a/src/sass/_responsive.scss
+++ b/src/sass/_responsive.scss
@@ -2,7 +2,7 @@
 
     //global style changes
     .overlay{
-    z-index:111111111111;
+    z-index:5;
     }
 
     //nav bar
